--- a/404.html
+++ b/404.html
@@ -8,6 +8,7 @@ layout: default
     max-width: 600px;
     text-align: center;
   }
+
   h1 {
     margin: 30px 0;
     font-size: 4em;
@@ -19,6 +20,6 @@ layout: default
 <div class="container">
   <h1>404</h1>
 
-  <p><strong>Page not found :(</strong></p>
-  <p>The requested page could not be found.</p>
+  <p><strong>U là trời :(</strong> Các bạn thông cảm, mình về nhà rồi tính tiếp nhé</p>
+  <a href='/'>Xin mời đi lối này</a>
 </div>
