Add Youtube link to blog

--- a/404.html
+++ b/404.html
@@ -3,23 +3,24 @@ layout: default
 ---
 
 <style type="text/css" media="screen">
-  .container {
-    margin: 10px auto;
-    max-width: 600px;
-    text-align: center;
-  }
+	.container {
+		margin: 10px auto;
+		max-width: 600px;
+		text-align: center;
+	}
 
-  h1 {
-    margin: 30px 0;
-    font-size: 4em;
-    line-height: 1;
-    letter-spacing: -1px;
-  }
+	h1 {
+		margin: 30px 0;
+		font-size: 4em;
+		line-height: 1;
+		letter-spacing: -1px;
+	}
 </style>
 
 <div class="container">
-  <h1>404</h1>
+	<h1>404</h1>
 
-  <p><strong>U là trời :(</strong> Các bạn thông cảm, mình về nhà rồi tính tiếp nhé</p>
-  <a href='/'>Xin mời đi lối này</a>
+	<p><strong>U là trời 🤔</strong></p>
+	<p>Các bạn thông cảm, mình về nhà đóng cửa bảo nhau nhé</p>
+	<a href='/'>Xin mời đi lối này</a>
 </div>
