--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 ---
+# Feel free to add content and custom Front Matter to this file.
+# To modify the layout, see https://jekyllrb.com/docs/themes/#overriding-theme-defaults
 layout: default
+background: /bg-home.jpg
 ---
 
 <!-- Page Header -->
@@ -21,8 +24,6 @@ layout: default
 <div class="container">
 	<div class="row">
 		<div class="col-lg-8 col-md-10 mx-auto">
-
-			{{ content }}
 
 			<!-- Home Post List -->
 			{% for post in site.posts limit : 5 %}
